--- a/404.html
+++ b/404.html
@@ -333,7 +333,7 @@ html, body {
       <div class="box__description-text">无法找到你需要的内容！</div>
     </div>
     
-    <a href="#" class="box__button">返回</a>
+    <a href="https://www.inssun.cn" class="box__button">首页</a>
     
   </div>
   
